2020-12-16  Jacob Bachmeyer  <jcb@gnu.org>

	* configure: Regenerate.

	* configure.ac: Remove Tcl version check.

	Apply patch from Nick Clifton:

	* baseboards/msp430-sim.exp: Add missing copyright and GPL notice.

	Apply patch from Dimitar Dimitrov:

	* baseboards/pru-sim.exp: New file.

	* Makefile.am (baseboard_DATA): Add pru-sim.exp to list.
	* Makefile.in (baseboard_DATA): Likewise.

2020-12-15  Jacob Bachmeyer  <jcb@gnu.org>

	* configure: Regenerate.
	* Makefile.in: Regenerate.

	* Makefile.am (RUNTEST): Explain override of Automake default.

	* configure.ac: Update for autoconf 2.69 using autoupdate.
	* configure.ac: Remove search for expect now handled by Automake.

	Apply patch from Dimitar Dimitrov:

	* Makefile.am (dejagnu_TEXINFOS): Change this...
	* Makefile.am (doc_dejagnu_TEXINFOS): ...to this.

	This fixes an incorrectly recorded dependency.

2020-11-17  Jacob Bachmeyer  <jcb@gnu.org>

	PR44636 / PR44693

	* doc/dejagnu.texi (Adding a new tool): Fix incorrect description
	that conflated the tool init file with the target interface file.
	(Make Check): Add cross-reference to the GNU Automake manual for
	more details.

2020-11-10  Jacob Bachmeyer  <jcb@gnu.org>

	PR44545

	* testsuite/lib/launcher.exp (link_dejagnu_launcher_test_item):
	Use [file normalize] to ensure that link targets are unambiguous.
	(link_dejagnu_launcher_test_item): Avoid spurious errors when test
	environment has already been prepared in a previous run.

	* testsuite/lib/launcher.exp (link_dejagnu_launcher_test_item):
	New procedure to collect existing repeated testsuite code.
	* testsuite/launcher.all/command.exp: Establish testing
	environment using link_dejagnu_launcher_test_item procedure.

2020-11-09  Jacob Bachmeyer  <jcb@gnu.org>

	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* Makefile.in: Regenerate.

	* configure.ac: Revert development version branch tagging hook.
	* Makefile.am: Likewise.

	These caused failures (reported in PR44462 as a secondary issue)